--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
 </head>
 <body>
 
-<div id="logo" style="text-align:center; margin-bottom:20px;">
-  <img src="https://cemaxoff.github.io/CrushQuiz/images/logo-crushquiz_rmvbg" alt="Logo CrushQuiz" width="120">
+<div id="logo-crushquiz_rmvbg" style="text-align:center; margin-bottom:20px;">
+  <img src="https://github.com/cemaxoff/CrushQuiz/images/logo-crushquiz_rmvbg.png" alt="Logo CrushQuiz" width="120">
 </div>
 
 <!-- PUB GAUCHE -->
@@ -634,3 +634,4 @@ function restartQuiz() {
 
 </body>
 </html>
+
