--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 }
 
 /* Logo fixe en haut à gauche */
-#logo {
+#logo-crushquiz_rmvbg {
   position: fixed;      /* reste à l’écran même au scroll */
   top: 12px;
   left: 12px;
   z-index: 1000;        /* au-dessus du quiz */
 }
 
-#logo img {
+#logo-crushquiz_rmvbg img {
   display: block;
   width: 80px;          /* taille desktop */
   height: auto;
@@ -39,7 +39,7 @@
 
 /* Version mobile : réduit le logo si l’écran est petit */
 @media (max-width: 500px) {
-  #logo img {
+  #logo-crushquiz_rmvbg img {
     width: 60px;        /* plus petit sur mobile */
   }
 }
@@ -634,4 +634,5 @@ function restartQuiz() {
 
 </body>
 </html>
+
 
