--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 <body>
 
 <div id="logo" style="text-align:center; margin-bottom:20px;">
-  <img src="https://cemaxoff.github.io/CrushQuiz/images/logo-crushquiz_rmvbg.png" alt="Logo CrushQuiz" width="120">
+  <img src="https://cemaxoff.github.io/CrushQuiz/logo.png" alt="Logo CrushQuiz" width="120">
 </div>
 
 <!-- PUB GAUCHE -->
@@ -634,3 +634,4 @@ function restartQuiz() {
 
 </body>
 </html>
+
