--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="icon" type="image/jpeg" href="https://cemaxoff.github.io/CrushQuiz/images/favicon.png">
+<link rel="icon" type="image/png" href="https://cemaxoff.github.io/CrushQuiz/images/logo.png">
 
   <style>
 
@@ -634,4 +634,5 @@ function restartQuiz() {
 
 </body>
 </html>
+
 
